testdata/baselines/reference/submodule/conformance/tsxSpreadAttributesResolution10.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
file.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== file.tsx (1 errors) ====
    import React = require('react');
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    interface OptionProp {
        x?: 2
    }
    
    class Opt extends React.Component<OptionProp, {}> {
        render() {
            return <div>Hello</div>;
        }
    }
    
    const obj: OptionProp = {};
    const obj1: OptionProp = {
        x: 2
    }
    
    // Error
    let y = <Opt {...obj} x={3}/>;
    let y1 = <Opt {...obj1} x="Hi"/>;
    let y2 = <Opt {...obj1} x={3}/>;
    let y3 = <Opt x />;
    